<?xml version="1.0"?>
<package>
  <name>takktile_ros</name>
  <description>ROS messages to interface with the TakkTile TakkStrip</description>

  <version>0.1.0</version>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/takktile_ros</url>
  <url type="repository">https://github.com/fsuarez6/takktile_ros</url>
  <author>TODO</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>rospy</build_depend>  
  <run_depend>rospy</run_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
